# nucon

./: .eslintrc.json  LICENSE  cssModulesTemplate.cjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
docs/: air60.md
src/: App.module.css  App.tsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: air60.rs  hid_wrapper.rs  main.rs  polymorphic_enum.rs
src/lib/: api.ts  handleDrag.ts  hid.ts
src/lib/sotore/: equal.ts  index.ts  react.ts
src/lib/sotore/middleware/: assign.ts  compute.ts  persistent.ts  react.ts
