[package]
name = "nucon"
version = "0.0.0"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
hidapi = "2.0.2"
tokio = { version = "1", features = ["full"] }
futures-timer = "3.0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
