[package]
name = "nucon"
version = "0.0.0"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["api-all"] }
hidapi = "2"
tokio = { version = "1", features = ["full"] }
futures-timer = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
